[tool.poetry]
name = "yamlett"
version = "0.1.0"
description = "Yet Another ML Experiment Tracking Tool"
authors = ["Virgile Landeiro <virgile.landeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pymongo = "^3.11.1"
fastcore = "^1.3.9"
loguru = "^0.5.3"
cloudpickle = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
