[tool.poetry]
name = "yamlett"
version = "0.1.0"
description = "Yet Another ML Experiment Tracking Tool"
authors = ["Virgile Landeiro <virgile.landeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pymongo = "^3.11.1"
fastcore = "^1.3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
mongomock = "^3.21.0"
coverage = "^5.3"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
